k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-go
  template:
    metadata:
      name: hello-go
      labels:
        app: hello-go
    spec:
      containers:
      - name: hello-go
        image: mhrocha1997/hello-go:v6.2
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 8000
        #   periodSeconds: 5
        #   failureThreshold: 3
        #   timeoutSeconds: 10
        #   successThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          periodSeconds: 3
          failureThreshold: 1
          initialDelaySeconds: 10

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        volumeMounts:
          - name: config-volume
            mountPath: /go/env
      volumes:
        - name: config-volume
          configMap:
            name: hello-go-family
            items: 
              - key: members
                path: "members.txt"
