k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  containers:
  - name: hello-go
    image: mhrocha1997/hello-go:latest
