k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-service
  labels:
    app: hello-go
spec:
  selector:
    app: hello-go
  
  # type: ClusterIP
  # ports:
  # - name: hello-go-service
  #   port: 8000
  #   targetPort: 8000
  
  # type: NodePort
  # ports:
  # - name: hello-go-service
  #   port: 8000
  #   targetPort: 30001
  #   protocol: TCP
  type: LoadBalancer
  ports:
  - name: hello-go-service
    port: 8001
    targetPort: 8000
    protocol: TCP
